--- a/app/package.json
+++ b/app/package.json
@@ -6,13 +6,13 @@
     "login-lecture": "bin/www.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon ./bin/www.js"
+    "start": "nodemon ./bin/www.js"
   },
   "author": "",
   "license": "ISC",
